[gd_scene load_steps=6 format=2]

[ext_resource path="res://simpleSpace_tilesheet.png" type="Texture" id=1]
[ext_resource path="res://Asteroid.gd" type="Script" id=2]
[ext_resource path="res://ScreenWrap/ScreenWrap.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 21.0238

[sub_resource type="CircleShape2D" id=2]
radius = 14.0357

[node name="Asteroid" type="Area2D" groups=["Asteroid"]]
collision_layer = 2
script = ExtResource( 2 )

[node name="LargeSpriteA" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 256, 64, 64 )

[node name="SmallSpriteA" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 64, 256, 64, 64 )

[node name="LargeSpriteB" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 128, 256, 64, 64 )

[node name="SmallSpriteB" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 256, 64, 64 )

[node name="LargeCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SmallCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="ScreenWrap" parent="." instance=ExtResource( 3 )]

[connection signal="area_entered" from="." to="." method="_on_Asteroid_area_entered"]
